reticulationg the splines, oh the reticulation ...
