# api/openapi.yml
@@ -57,12 +57,6 @@ paths:
           type: string
           required: true
 
-        - name: authorization
-          description: API access authorization in JWT access token format
-          in: header
-          type: string
-          required: true
-
         - name: data
           description: The composer to add or update
           in: body
@@ -82,12 +76,6 @@ paths:
       parameters:
         - name: id
           in: path
-          type: string
-          required: true
-
-        - name: authorization
-          description: API access authorization in JWT access token format
-          in: header
           type: string
           required: true
 
@@ -188,12 +176,6 @@ paths:
           type: string
           required: true
 
-        - name: authorization
-          description: API access authorization in JWT access token format
-          in: header
-          type: string
-          required: true
-
         - name: data
           description: The piece to add or update
           in: body
@@ -213,12 +195,6 @@ paths:
       parameters:
         - name: id
           in: path
-          type: string
-          required: true
-
-        - name: authorization
-          description: API access authorization in JWT access token format
-          in: header
           type: string
           required: true
 
@@ -269,6 +245,24 @@ paths:
             type: array
             items:
               $ref: '#/definitions/Performance'
+    put:
+      summary: Add or update a performance
+      description: Add or update a performance
+      parameters:
+        - name: data
+          description: The performance to add or update
+          in: body
+          required: true
+          schema:
+            $ref: '#/definitions/Performance'
+
+      responses:
+        '200':
+          description: Performance updated
+        '403':
+          description: Unauthorized
+        '500':
+          description: Internal error
 
   '/performances/{id}':
     get:
@@ -285,34 +279,9 @@ paths:
           description: Performance information
           schema:
             $ref: '#/definitions/Performance'
+        '500':
+          description: Internal error
 
-    put:
-      summary: Add or update a performance
-      description: Add or update a performance
-      parameters:
-        - name: id
-          in: path
-          type: string
-          required: true
-
-        - name: authorization
-          description: API access authorization in JWT access token format
-          in: header
-          type: string
-          required: true
-
-        - name: data
-          description: The performance to add or update
-          in: body
-          required: true
-          schema:
-            $ref: '#/definitions/Performance'
-
-      responses:
-        '200':
-          description: Performance updated
-        '403':
-          description: Unauthorized
 
     delete:
       summary: Delete a performance
@@ -320,12 +289,6 @@ paths:
       parameters:
         - name: id
           in: path
-          type: string
-          required: true
-
-        - name: authorization
-          description: API access authorization in JWT access token format
-          in: header
           type: string
           required: true
 
@@ -355,6 +318,44 @@ paths:
             items:
               $ref: '#/definitions/Recording'
 
+    put:
+      summary: Add or update a recording
+      description: Add or update a recording
+      consumes:
+        - multipart/form-data
+      parameters:
+        - name: performance
+          description: performance name
+          in: formData
+          type: string
+          required: true
+
+        - name: movement
+          description: movement number
+          in: formData
+          type: integer
+          required: true
+
+        - name: file
+          description: recording file
+          in: formData
+          type: file
+          required: true
+
+          #- name: data
+          #description: The recording to add or update
+          #in: body
+          #required: true
+          #schema:
+          #$ref: '#/definitions/Recording'
+      responses:
+        '200':
+          description: Recording updated
+        '403':
+          description: Unauthorized
+        '500':
+          description: Internal error
+
   '/recordings/{id}':
     get:
       summary: Get recording information
@@ -371,33 +372,6 @@ paths:
           schema:
             $ref: '#/definitions/Recording'
 
-    put:
-      summary: Add or update a recording
-      description: Add or update a recording
-      parameters:
-        - name: id
-          in: path
-          type: string
-          required: true
-
-        - name: authorization
-          description: API access authorization in JWT access token format
-          in: header
-          type: string
-          required: true
-
-        - name: data
-          description: The recording to add or update
-          in: body
-          required: true
-          schema:
-            $ref: '#/definitions/Recording'
-
-      responses:
-        '200':
-          description: Recording updated
-        '403':
-          description: Unauthorized
 
     delete:
       summary: Delete a recording
@@ -405,12 +379,6 @@ paths:
       parameters:
         - name: id
           in: path
-          type: string
-          required: true
-
-        - name: authorization
-          description: API access authorization in JWT access token format
-          in: header
           type: string
           required: true
 
@@ -465,12 +433,6 @@ paths:
           type: string
           required: true
 
-        - name: authorization
-          description: API access authorization in JWT access token format
-          in: header
-          type: string
-          required: true
-
         - name: data
           description: The musician to add or update
           in: body
@@ -490,12 +452,6 @@ paths:
       parameters:
         - name: id
           in: path
-          type: string
-          required: true
-
-        - name: authorization
-          description: API access authorization in JWT access token format
-          in: header
           type: string
           required: true
 
@@ -550,12 +506,6 @@ paths:
           type: string
           required: true
 
-        - name: authorization
-          description: API access authorization in JWT access token format
-          in: header
-          type: string
-          required: true
-
         - name: data
           description: The part to add or update
           in: body
@@ -575,12 +525,6 @@ paths:
       parameters:
         - name: id
           in: path
-          type: string
-          required: true
-
-        - name: authorization
-          description: API access authorization in JWT access token format
-          in: header
           type: string
           required: true
 
@@ -635,12 +579,6 @@ paths:
           type: string
           required: true
 
-        - name: authorization
-          description: API access authorization in JWT access token format
-          in: header
-          type: string
-          required: true
-
         - name: data
           description: The key to add or update
           in: body
@@ -663,12 +601,6 @@ paths:
           type: string
           required: true
 
-        - name: authorization
-          description: API access authorization in JWT access token format
-          in: header
-          type: string
-          required: true
-
       responses:
         '200':
           description: Key deleted
@@ -681,7 +613,7 @@ definitions:
   Composer:
     properties:
       id:
-        type: string #uri
+        type: string
       first:
         type: string
       middle:
@@ -692,7 +624,7 @@ definitions:
   Piece:
     properties:
       id:
-        type: string #uri
+        type: string
       composer:
         $ref: '#/definitions/Composer'
       title:
@@ -715,7 +647,7 @@ definitions:
   Movement:
     properties:
       id:
-        type: string #uri
+        type: string
       title:
         type: string
       number:
@@ -740,23 +672,19 @@ definitions:
   Performance:
     properties:
       id:
-        type: string #uri
-      venue:
+        type: string
+      pieceId:
+        type: string
+      title:
         type: string
       description:
         type: string
       date:
         type: string
-      date:
-        type: string 
       performers:
         type: array
         items:
           $ref: '#/definitions/Performer'
-      recordings:
-        type: array
-        items:
-          $ref: '#/definitions/Recording'
 
   Performer:
     properties:
@@ -770,7 +698,7 @@ definitions:
   Musician:
     properties:
       id:
-        type: string #uri
+        type: string
       first:
         type: string
       middle:
@@ -781,13 +709,11 @@ definitions:
   Recording:
     properties:
       id:
-        type: string #uri
+        type: string
       performance:
         type: string 
       movement:
         type: string
-      number:
-        type: integer
       file:
         type: string
 
