# api/restapi/operations/put_performances_responses.go
@@ -1,0 +1,84 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+)
+
+// PutPerformancesOKCode is the HTTP code returned for type PutPerformancesOK
+const PutPerformancesOKCode int = 200
+
+/*PutPerformancesOK Performance updated
+
+swagger:response putPerformancesOK
+*/
+type PutPerformancesOK struct {
+}
+
+// NewPutPerformancesOK creates PutPerformancesOK with default headers values
+func NewPutPerformancesOK() *PutPerformancesOK {
+
+	return &PutPerformancesOK{}
+}
+
+// WriteResponse to the client
+func (o *PutPerformancesOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(200)
+}
+
+// PutPerformancesForbiddenCode is the HTTP code returned for type PutPerformancesForbidden
+const PutPerformancesForbiddenCode int = 403
+
+/*PutPerformancesForbidden Unauthorized
+
+swagger:response putPerformancesForbidden
+*/
+type PutPerformancesForbidden struct {
+}
+
+// NewPutPerformancesForbidden creates PutPerformancesForbidden with default headers values
+func NewPutPerformancesForbidden() *PutPerformancesForbidden {
+
+	return &PutPerformancesForbidden{}
+}
+
+// WriteResponse to the client
+func (o *PutPerformancesForbidden) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(403)
+}
+
+// PutPerformancesInternalServerErrorCode is the HTTP code returned for type PutPerformancesInternalServerError
+const PutPerformancesInternalServerErrorCode int = 500
+
+/*PutPerformancesInternalServerError Internal error
+
+swagger:response putPerformancesInternalServerError
+*/
+type PutPerformancesInternalServerError struct {
+}
+
+// NewPutPerformancesInternalServerError creates PutPerformancesInternalServerError with default headers values
+func NewPutPerformancesInternalServerError() *PutPerformancesInternalServerError {
+
+	return &PutPerformancesInternalServerError{}
+}
+
+// WriteResponse to the client
+func (o *PutPerformancesInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(500)
+}
