# api/restapi/operations/put_recordings_responses.go
@@ -1,0 +1,84 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+)
+
+// PutRecordingsOKCode is the HTTP code returned for type PutRecordingsOK
+const PutRecordingsOKCode int = 200
+
+/*PutRecordingsOK Recording updated
+
+swagger:response putRecordingsOK
+*/
+type PutRecordingsOK struct {
+}
+
+// NewPutRecordingsOK creates PutRecordingsOK with default headers values
+func NewPutRecordingsOK() *PutRecordingsOK {
+
+	return &PutRecordingsOK{}
+}
+
+// WriteResponse to the client
+func (o *PutRecordingsOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(200)
+}
+
+// PutRecordingsForbiddenCode is the HTTP code returned for type PutRecordingsForbidden
+const PutRecordingsForbiddenCode int = 403
+
+/*PutRecordingsForbidden Unauthorized
+
+swagger:response putRecordingsForbidden
+*/
+type PutRecordingsForbidden struct {
+}
+
+// NewPutRecordingsForbidden creates PutRecordingsForbidden with default headers values
+func NewPutRecordingsForbidden() *PutRecordingsForbidden {
+
+	return &PutRecordingsForbidden{}
+}
+
+// WriteResponse to the client
+func (o *PutRecordingsForbidden) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(403)
+}
+
+// PutRecordingsInternalServerErrorCode is the HTTP code returned for type PutRecordingsInternalServerError
+const PutRecordingsInternalServerErrorCode int = 500
+
+/*PutRecordingsInternalServerError Internal error
+
+swagger:response putRecordingsInternalServerError
+*/
+type PutRecordingsInternalServerError struct {
+}
+
+// NewPutRecordingsInternalServerError creates PutRecordingsInternalServerError with default headers values
+func NewPutRecordingsInternalServerError() *PutRecordingsInternalServerError {
+
+	return &PutRecordingsInternalServerError{}
+}
+
+// WriteResponse to the client
+func (o *PutRecordingsInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(500)
+}
